# FerrisKeys

./: Cargo.toml  LICENSE.md  README.md  app.rc  build.rs  ferriskeys.desktop
.github/workflows/: release.yml
src/: app.rs  main.rs
src/config/: config.rs  default_config.rs  mod.rs
src/input/: input.rs  keyboard.rs  keymap.rs  layout.rs  mod.rs
src/platform/: windows.rs
src/platform/linux/: input.rs  layout.rs
src/platform/macos/: input.rs
src/platform/windows/: input.rs  layout.rs  mod.rs  tray.rs  windows.rs
src/ui/: mod.rs  tray.rs  ui.rs  visualiser.rs
