[package]
name = "ferriskeys"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
crossbeam-channel = "0.5"
device_query = "1.1"
dirs = "5"
eframe = "0.31.1"
embed-resource = "2.3"
evdev = "0.12"
image = "0.25"
lazy_static = "1.5.0"
muda = "0.16.1"
notify = "8.0.0"
once_cell = "1.19"
rdev = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
tray-icon = "0.20.1"
winapi = { version = "0.3", features = ["winuser"] }
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging"] }
winit = "0.30.11"

[features]
serde = []

[build-dependencies]
embed-resource = "3.0.3"

[[bin]]
name = "ferriskeys"
path = "src/main.rs"
windows_subsystem = "windows"